Ajuste Esqueci Minha Senha

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <form id="forgot-password-form">
                     <div class="form-group">
                         <input type="email" id="forgot-password-email" placeholder="E-mail" required>
-                        <span class="error-message" id="forgot-password-error"></span>
+                        <span class="error-message" id="forgot-password-email-error"></span>
                     </div>
                     <button type="submit">Enviar link de recuperação</button>
                 </form>
